--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ black = "^25.1.0"
 disallow_untyped_defs = true
 no_implicit_optional = true
 warn_return_any = true
-exclude = 'venv'
+exclude = ['venv', 'tests']
 
 [tool.black]
 # Максимальная длина строки
